discussion/kv_engine/128225/128225_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39421 Remove magma SoftDeleteKVStore

This routine is no longer needed because magma will add atomic kvstore
operations for create and delete kvstore with CBSS-457.

Change-Id: I30012f55f60212fa532f9659d1f98dc3e3006fdf

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-05-15 19:47:23.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-15 20:13:25.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28103/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(839): error C2679: binary "=": no operator found which takes a right-hand operand of type "magma::Magma::KVStoreRevision" (or there is no acceptable conversion) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28103/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2223/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:839:30: error: no viable overloaded "=" [clang-diagnostic-error]
    std::tie(status, kvsRev) = magma->GetKVStoreRevision(vbid.get());
                             ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1209:7: note: candidate function not viable: no known conversion from "magma::Magma::KVStoreRevision" (aka "unsigned int") to "const std::tuple<magma::Status &, unsigned int &>" for 1st argument
      operator=(const tuple& __in)
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1216:7: note: candidate function not viable: no known conversion from "magma::Magma::KVStoreRevision" (aka "unsigned int") to "std::tuple<magma::Status &, unsigned int &>" for 1st argument
      operator=(tuple&& __in)
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1225:9: note: candidate template ignored: could not match "tuple<type-parameter-0-0, type-parameter-0-1>" against "unsigned int"
        operator=(const tuple<_U1, _U2>& __in)
        ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1233:9: note: candidate template ignored: could not match "tuple<type-parameter-0-0, type-parameter-0-1>" against "unsigned int"
        operator=(tuple<_U1, _U2>&& __in)
        ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1241:9: note: candidate template ignored: could not match "pair<type-parameter-0-0, type-parameter-0-1>" against "unsigned int"
        operator=(const pair<_U1, _U2>& __in)
        ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1250:9: note: candidate template ignored: could not match "pair<type-parameter-0-0, type-parameter-0-1>" against "unsigned int"
        operator=(pair<_U1, _U2>&& __in)
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:908:30: error: no viable overloaded "=" [clang-diagnostic-error]
    std::tie(status, kvsRev) = magma->GetKVStoreRevision(vbid.get());
                             ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1209:7: note: candidate function not viable: no known conversion from "magma::Magma::KVStoreRevision" (aka "unsigned int") to "const std::tuple<magma::Status &, unsigned int &>" for 1st argument
      operator=(const tuple& __in)
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1216:7: note: candidate function not viable: no known conversion from "magma::Magma::KVStoreRevision" (aka "unsigned int") to "std::tuple<magma::Status &, unsigned int &>" for 1st argument
      operator=(tuple&& __in)
      ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1225:9: note: candidate template ignored: could not match "tuple<type-parameter-0-0, type-parameter-0-1>" against "unsigned int"
        operator=(const tuple<_U1, _U2>& __in)
        ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1233:9: note: candidate template ignored: could not match "tuple<type-parameter-0-0, type-parameter-0-1>" against "unsigned int"
        operator=(tuple<_U1, _U2>&& __in)
        ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1241:9: note: candidate template ignored: could not match "pair<type-parameter-0-0, type-parameter-0-1>" against "unsigned int"
        operator=(const pair<_U1, _U2>& __in)
        ^
/usr/local/bin/../lib/gcc/x86_64-pc-linux-gnu/7.3.0/../../../../include/c++/7.3.0/tuple:1250:9: note: candidate template ignored: could not match "pair<type-parameter-0-0, type-parameter-0-1>" against "unsigned int"
        operator=(pair<_U1, _U2>&& __in)
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2223/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:839:30:
error: no viable overloaded "=" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2223/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24060/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:839:30:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24060/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3747/ : FAILURE

Compile error at [2020-05-15T19:58:48.379Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:839:68:
error: no match for ?operator=? (operand types are ?std::tuple<magma::Status&, unsigned int&>? and ?magma::Magma::KVStoreRevision {aka unsigned int}?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3747/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2754/ : FAILURE

Compile error at [2020-05-15T19:48:26.906Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:839:30:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2754/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3684/ : FAILURE

Compile error at [2020-05-15T19:48:38.314Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:839:68:
error: no match for ?operator=? (operand types are ?std::tuple<magma::Status&, unsigned int&>? and ?magma::Magma::KVStoreRevision {aka unsigned int}?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3684/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11533/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/739/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3660/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
